# Blackjack21

./: README.md  pyproject.toml
blackjack/: __main__.py  app.py
blackjack/common/: game_round_settings.py
blackjack/game/: card.py  chips.py  deck.py  hand.py
