[tool.poetry]
name = "blackjack21"
version = "0.1.0"
description = ""
authors = ["Gabriel Santos <gabriel.santos@wildlifestudios.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
